# aws_s3_boto3_acess_datalake

./: README.md  extract_load_parquet_to_database.py  pyproject.toml
